# retrievalQA

./: .gitignore  Makefile  README.md  pyproject.toml
src/: gradio_demo.py  retrieval.py
src/embed/: make_embed.py
